--- a/Frontend/src/assets/i18n/en.json
+++ b/Frontend/src/assets/i18n/en.json
@@ -221,7 +221,7 @@
   "baby.total_Number_of_children_alive_including_this_child": "Total Number Of Children Alive Including This Child",
   "baby.For_Hospital_Staff": "For Hospital Staff", 
   "baby.About_New_Born_Child": "About New Born Child",
-  "baby.method_of_delivery":"type Of Delivery ",
+  "baby.method_of_delivery":"Type Of Delivery ",
   "baby.Normal_Delivery": "Normal Delivery" ,
   "baby.Low_Delivery": "Low Delivery" ,
   "baby.Vaccume_Delivery": " Vaccume Delivery",  
@@ -434,7 +434,7 @@
   "baby.Doctors_Notes":  "For Doctors",
  "baby.date_of_checked" : "Date",
  "baby.special_notice": "Special Notice" ,
-  "baby.Check_Baby_Teeth" :  "For Mothers To Check Baby's Teeth",
+  "baby.Check_Baby_Teeth" :  "Check Baby's Teeth",
   "baby.Age_Of_Child" :  "Age Of Child" ,
   "baby.No_Of_Teeth" : "No Of Teeth",
   "baby.Status_Good" : "Status Good",
@@ -708,7 +708,7 @@
     "phm.No_of_mothers_good_for_vdrl":"Number of Mothers Good for VDRL Test",
     "phm.No_of_mothers_for_dental_treatement":"Number of Mothers Faced to Dental Tests",
     "phm.No_of_mothers_identify_dental_problems":"Number of Mothers With Dental Problems",
-    "phm.04_Mother_Protection(1st_After_Delivery_Visit)": "04_Mother_Protection(1st_After_Delivery_Visit)",
+    "phm.04_Mother_Protection": "04. Mother Protection(1st After Delivery Visit)",
     "phm.No_of_mothers_identify_health_problems_pregnancy_time":"Number of Mothers Identified Health Problems at Pregnancy Time",
     "phm.Blood_presure" : "Blood Presure",
     "phm.before":"Before Pregnancy",
@@ -725,7 +725,7 @@
     "phm.Urinary_tract_infections":"Urinary Tract Infections",
     "phm.Other":"Other",
     "phm.05_Result_Of_Pregnancy": "05. Result Of Pregnancy",
-    "phm.phm.No_of_live_birth": "Number of Live Births",
+    "phm.No_of_live_birth": "Number of Live Births",
     "phm.No_of_live_birth_first":"First Time",
     "phm.No_of_live_birth_second":"Second Time",
     "phm._notpermamnt":"Non-permanent",
@@ -832,7 +832,7 @@
     "phm.young_deaths": "New Youngers' Deaths",
     "phm.No_of_death_between_5_10_yr":"5-10 Years",
     "phm.no_of_death_between_10_19_yr":"10-19 Years",
-    "phm.family_planing": "10. Family Planning",
+    "phm.family_planing": "09. Family Planning",
     "phm.tablets": "Tablets",
     "phm.No_of_couples_start_month_tablet":"Number of Couples at Satrt Month",
     "phm.New_identified_tablet":"New Identitied Couples",
@@ -865,13 +865,13 @@
     "phm.Fail_family_plan_two":"Number",
     "phm.No_of_high_infections":"Number of High-infections",
     "phm.No_of_house_walking_new_famiy_planners":"House Visits for New Family Planing Users",
-    "phm.men_women_health": "11. Men And Women Health",
+    "phm.men_women_health": "10. Men And Women Health",
     "phm.No_of_arresements": "Newly identified men and women with arresements",
     "phm.No_of_arresements_man":"Men",
     "phm.No_of_arresements_woman":"Women",
     "phm.No_of_arresements_mental_new":"Mental situation of men and women with arresements",
     "phm.No_of_reffers":"Number of Refers",
-    "phm.other": "12. Other",
+    "phm.other": "11. Other",
     "phm.About_nutritions":"About Nutritions",
     "phm.No_of_clinics_married":"Clinics for Married Couples",
     "phm.No_of_suawanari_clinic":"Number of Suwanari Clinics",
