Final Changes Added

--- a/Frontend/src/assets/i18n/en.json
+++ b/Frontend/src/assets/i18n/en.json
@@ -27,7 +27,7 @@
   "family.Name_of_wife": "Name of wife",
   "family.Name_of_husband": "Name of husband",
   "family.Address": "Address",
-  "family.Date_of_birth": "Birth date",
+  "family.Date_of_birth": "Birth date of mother",
   "family.Age_at_the_time_of_marriage": "Age at the time of marriage",
   "family.Job_status": "Job status",
   "family.Education_level": "Education level" ,
