--- a/Frontend/src/assets/i18n/sn.json
+++ b/Frontend/src/assets/i18n/sn.json
@@ -26,7 +26,7 @@
     "family.Name_of_wife": "භාර්යාවගේ නම",
     "family.Name_of_husband": "පුරුෂයාගේ නම",
     "family.Address": "ලිපිනය",
-    "family.Date_of_birth": "උපන් දිනය",
+    "family.Date_of_birth": "භාර්යාවගේ උපන් දිනය",
     "family.Age_at_the_time_of_marriage": "විවාහයේදී වයස",
     "family.Job_status": "රැකියාව",
     "family.Education_level": "අධ්‍යාපන මට්ටම" ,
